# screenshotapi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: django_view.py  fastapi_app.py  flask_app.py  script_usage.py
src/screenshotapi/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
